--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -34,11 +34,11 @@
    
    \begin{itemize}
       \item The new \textbf{LFO} button in the bottom panel.
-      \item The new \textbf{Rec Type} button in the bottom panel,.
+      \item The new \textbf{Rec Type}button in the bottom panel.
    \end{itemize}
 
-   Both are described later, but we need to update the screenshot at some
-   point.
+   Both are described later. See
+   \figureref{fig:pattern_editor_bottom_panel_items}.
 
    This dialog is complex.
    For exposition, we break it into some common actions, a first panel, a
@@ -204,21 +204,22 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.55]{pattern/pattern-edit-second-panel-items.png}
+%  \includegraphics[scale=0.55]{pattern/pattern-edit-second-panel-items.png}
+   \includegraphics[scale=0.55]{new/pattern-edit-second-panel.png}
    \caption{Pattern Editor, Second Panel Items}
    \label{fig:pattern_editor_main_panel_items}
 \end{figure}
 
    We show a new screen-shot, because there is a new button to the right
    of the \textbf{Tools} ("hammer" button).  This button toggles the "follow
-   progress" feature; it is the active button in the following diagram.
+   progress" feature; it is the active button in the diagram above.
 
-\begin{figure}[H]
-   \centering 
-   \includegraphics[scale=0.55]{pattern/pattern-edit-second-panel-items-2.png}
-   \caption{Pattern Editor, Second Panel Update}
-   \label{fig:pattern_editor_main_panel_update}
-\end{figure}
+% \begin{figure}[H]
+%    \centering 
+%    \includegraphics[scale=0.55]{pattern/pattern-edit-second-panel-items-2.png}
+%    \caption{Pattern Editor, Second Panel Update}
+%    \label{fig:pattern_editor_main_panel_update}
+% \end{figure}
 
    If \textsl{Sequencer64} is built with the new chord-generation option
    built in (the default), then the second panel is wider to make room for an
@@ -1210,27 +1211,28 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{pattern/pattern-edit-bottom-panel-items.png}
+%  \includegraphics[scale=0.75]{pattern/pattern-edit-bottom-panel-items.png}
+   \includegraphics[scale=0.50]{new/pattern-edit-bottom-panel.png}
    \caption{Pattern Editor, Bottom Panel Items}
    \label{fig:pattern_editor_bottom_panel_items}
 \end{figure}
 
-   Until we can get a completely labelled screenshot, here is the
-   latest bottom panel, with the new \textbf{LFO}
-   and \textbf{Recording Type} buttons, and the popup menu for the latter.
-
-\begin{figure}[H]
-   \centering 
-   \includegraphics[scale=0.75]{new/lfo_and_rectype_buttons.png}
-   \caption{Pattern Editor, Additional Bottom Panel Items}
-   \label{fig:pattern_editor_added_bottom_panel_items}
-\end{figure}
+%  Until we can get a completely labelled screenshot, here is the
+%  latest bottom panel, with the new \textbf{LFO}
+%  and \textbf{Recording Type} buttons, and the popup menu for the latter.
+%
+%\begin{figure}[H]
+%   \centering 
+%   \includegraphics[scale=0.75]{new/lfo_and_rectype_buttons.png}
+%   \caption{Pattern Editor, Additional Bottom Panel Items}
+%   \label{fig:pattern_editor_added_bottom_panel_items}
+%\end{figure}
 
    \begin{enumber}
       \item \textbf{Event Selector}
       \item \textbf{Event Selection}
-      \item \textbf{LFO} (if built with LFO support; not shown)
-      \item \textbf{Time Scroll}
+      \item \textbf{LFO}
+%     \item \textbf{Time Scroll}
       \item \textbf{Data To MIDI Buss}
       \item \textbf{MIDI Data Pass-Through}
       \item \textbf{Record MIDI Data}
