--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -62,33 +62,37 @@
 \subsection{Patterns / Top Panel}
 \label{subsec:seq64_patterns_panel_top}
 
-   The top panel of the Pattern window is simple, consisting of the name of
-   the program and a couple of controls.  The original version looked like
-   this:
+   The top panel of the Pattern window is relatively simple, consisting of the
+   name of the program and a few controls.  The latest version adds more
+   buttons.
+   
+%  The original version looked like
+%  this:
 
-\begin{figure}[H]
-   \centering 
-   \includegraphics[scale=0.75]{pattern-window-top-panel-items.png}
-   \caption{Patterns Panel, Top Panel, Older Version}
-   \label{fig:pattern_window_top_panel_items}
-\end{figure}
+% \begin{figure}[H]
+%    \centering 
+%    \includegraphics[scale=0.75]{pattern-window-top-panel-items.png}
+%    \caption{Patterns Panel, Top Panel, Older Version}
+%    \label{fig:pattern_window_top_panel_items}
+% \end{figure}
 
-   But, if compiled with \texttt{SEQ64\_STAZED\_MENU\_BUTTONS} defined,
-   there are some extra buttons available:
+%  But, if compiled with \texttt{SEQ64\_STAZED\_MENU\_BUTTONS} defined,
+%  there are some extra buttons available:
 
 \begin{figure}[H]
    \centering 
 %  \includegraphics[scale=0.50]{pattern-window-top-panel-items-new.png}
-   \includegraphics[scale=0.50]{new/pattern-window-top-panel-items-new.png}
+%  \includegraphics[scale=0.50]{new/pattern-window-top-panel-items-new.png}
+   \includegraphics[scale=0.50]{new/pattern-window-top-panel.png}
    \caption{Patterns Panel, New Top Panel Items}
    \label{fig:pattern_window_new_top_panel_items}
 \end{figure}
 
-   This figure shows the possible appearance of the main window top panel.
-   If \textsl{Sequencer64} was built with
-   \texttt{SEQ64\_MENU\_BUTTON\_PIXMAPS} defined, then the buttons have icons
-   on them; otherwise they have text.  The figure shows what they look like,
-   and how they look with the song/live and toggle-menu functions activated.
+   This figure shows the appearance of the main window top panel.
+%  If \textsl{Sequencer64} was built with
+%  \texttt{SEQ64\_MENU\_BUTTON\_PIXMAPS} defined, then the buttons have icons
+%  on them; otherwise they have text.  The figure shows what they look like,
+%  and how they look with the song/live and toggle-menu functions activated.
  
    \begin{enumber}
       \item \textbf{Song/Live}
@@ -1183,7 +1187,8 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.75]{pattern-window-bottom-panel-items.png}
+%  \includegraphics[scale=0.75]{pattern-window-bottom-panel-items.png}
+   \includegraphics[scale=0.50]{new/pattern-window-bottom-panel.png}
    \caption{Patterns Panel, Bottom Panel Items}
    \label{fig:pattern_window_bottom_panel_items}
 \end{figure}
