--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -127,7 +127,8 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.55]{song-editor/song-editor-top-panel-items.png}
+%  \includegraphics[scale=0.55]{song-editor/song-editor-top-panel-items.png}
+   \includegraphics[scale=0.55]{new/song-editor-top-panel-items.png}
    \caption{Song Editor / Top Panel Items}
    \label{fig:song_editor_top_panel_items}
 \end{figure}
@@ -139,6 +140,9 @@
       \item \textbf{Beats Per Bar}
       \item \textbf{Beat Unit}
       \item \textbf{Grid Snap}
+      \item \textbf{Transpose}
+      \item \textbf{Toggle JACK Sync}
+      \item \textbf{Toggle Following JACK Transport}
       \item \textbf{Redo}
       \item \textbf{Undo}
       \item \textbf{Collapse}
