--- a/tex/docs-structure.tex
+++ b/tex/docs-structure.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-04-20
-% \update      2016-11-12
+% \update      2016-11-29
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -53,6 +53,14 @@
 
 \usepackage{longtable}        % For making multi-page tables
 \usepackage{makeidx}          % For making an index
+
+% Try to reduce the space before or after verbatim sections.
+% Doesn't affect the spacing after the verbatim, though.
+
+\usepackage{etoolbox}
+\makeatletter
+\preto{\@verbatim}{\topsep=10pt \partopsep=0pt}
+\makeatother
 
 % Let's try to reduce the size of quotations.
 
@@ -114,6 +122,7 @@
 % for it.
 
 \newcommand{\itempar}[2] {
+   \noindent
    \stepcounter{ItemCounter}
    \textbf{\arabic{ItemCounter}. #1.}
    \index{#1}
